# download-master

./: .pre-commit-config.yaml  README.md  links.txt  pyproject.toml
src/: downloader.py  exceptions.py  main.py
tests/: conftest.py  links.txt  test_downloader.py
